# practice-rustodo

./: Cargo.toml  Justfile  docker-compose.yml
migrations/2022-09-03-005839_create-todo/: up.sql
migrations/2022-09-03-010734_create-tags/: up.sql
migrations/2022-09-03-010844_create-relation-for-todos-and-tags/: down.sql  up.sql
migrations/2022-09-03-112240_rename-id-to-more-explicit/: down.sql  up.sql
src/: domain.rs  helpers.rs  main.rs
src/db/: mod.rs  schema.rs  session.rs  todo.rs
src/endpoints/rest/: context.rs  error.rs  mod.rs  schema.rs  scheme.rs
src/endpoints/rest/routes/: todo.rs
src/endpoints/rest/todo/: get.rs  mod.rs
src/repository/: mod.rs
src/repository/postgres/: mod.rs  todo.rs
src/repository/postgres/todo/: get.rs  mod.rs
src/repository/traits/: todo.rs
src/service/: todo.rs
