[package]
name = "practice-rustodo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
diesel = { version = "2.0.0", features = ["postgres"] }
dotenv = "0.15.0"
itertools = "0.10.3"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
serde_repr = "0.1.9"
thiserror = "1.0.33"
tokio = { version = "1.21.1", features = ["full", "sync"] }
warp = "0.3.2"
